start using env variables and dotenv gem for cybersourcery config

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-CYBERSOURCE_HOST = 'https://testsecureacceptance.cybersource.com'
-CYBERSOURCE_REPLAY = 'true'
+CYBERSOURCERY_SOP_TEST_URL = 'https://testsecureacceptance.cybersource.com'
+CYBERSOURCERY_SOP_LIVE_URL = 'https://secureacceptance.cybersource.com'
+CYBERSOURCERY_SOP_PROXY_URL = 'http://127.0.0.1:5555'
+CYBERSOURCERY_USE_VCR_IN_TESTS = true
